Character onboarding and various features